--- a/installdependencies.yml
+++ b/installdependencies.yml
@@ -14,3 +14,7 @@
       with_items:
             - apache2
             - stress 
+            - wget
+            - nodejs
+            - npm
+            - docker.io  
